--- a/Words/Words.csproj
+++ b/Words/Words.csproj
@@ -77,14 +77,15 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="Resources\flags\flags.csv" />
-    <None Include="Resources\vehicles\vehicles.csv" />
-    <None Include="Resources\words.csv" />
+    <None Include="Resources\wordList\flags.csv" />
+    <None Include="Resources\wordList\vehicles.csv" />
+    <None Include="Resources\wordList\fruits.csv" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\wordList\animals.csv" />
     <Content Include="Resources\animals\bear.jpg" />
     <Content Include="Resources\animals\cat.jpg" />
     <Content Include="Resources\animals\cheetah.jpg" />
@@ -104,11 +105,9 @@
     <Content Include="Resources\flags\Afghanistan.png" />
     <Content Include="Resources\flags\Albania.png" />
     <Content Include="Resources\flags\Algeria.png" />
-    <Content Include="Resources\flags\American_Samoa.png" />
     <Content Include="Resources\flags\Andorra.png" />
     <Content Include="Resources\flags\Angola.png" />
     <Content Include="Resources\flags\Anguilla.png" />
-    <Content Include="Resources\flags\Antigua_and_Barbuda.png" />
     <Content Include="Resources\flags\Argentina.png" />
     <Content Include="Resources\flags\Armenia.png" />
     <Content Include="Resources\flags\Aruba.png" />
@@ -129,48 +128,31 @@
     <Content Include="Resources\flags\Bosnia.png" />
     <Content Include="Resources\flags\Botswana.png" />
     <Content Include="Resources\flags\Brazil.png" />
-    <Content Include="Resources\flags\British_Virgin_Islands.png" />
     <Content Include="Resources\flags\Brunei.png" />
     <Content Include="Resources\flags\Bulgaria.png" />
-    <Content Include="Resources\flags\Burkina_Faso.png" />
     <Content Include="Resources\flags\Burundi.png" />
     <Content Include="Resources\flags\Cambodia.png" />
     <Content Include="Resources\flags\Cameroon.png" />
     <Content Include="Resources\flags\Canada.png" />
-    <Content Include="Resources\flags\Cape_Verde.png" />
-    <Content Include="Resources\flags\Cayman_Islands.png" />
-    <Content Include="Resources\flags\Central_African_Republic.png" />
     <Content Include="Resources\flags\Chad.png" />
     <Content Include="Resources\flags\Chile.png" />
     <Content Include="Resources\flags\China.png" />
-    <Content Include="Resources\flags\Christmas_Island.png" />
     <Content Include="Resources\flags\Colombia.png" />
     <Content Include="Resources\flags\Comoros.png" />
-    <Content Include="Resources\flags\Cook_Islands.png" />
-    <Content Include="Resources\flags\Costa_Rica.png" />
-    <Content Include="Resources\flags\countries-flags-and-their-short-names.png" />
     <Content Include="Resources\flags\Croatia.png" />
     <Content Include="Resources\flags\Cuba.png" />
     <Content Include="Resources\flags\Cyprus.png" />
-    <Content Include="Resources\flags\Czech_Republic.png" />
-    <Content Include="Resources\flags\Democratic_Republic_of_the_Congo.png" />
     <Content Include="Resources\flags\Denmark.png" />
     <Content Include="Resources\flags\Djibouti.png" />
     <Content Include="Resources\flags\Dominica.png" />
-    <Content Include="Resources\flags\Dominican_Republic.png" />
     <Content Include="Resources\flags\Ecuador.png" />
     <Content Include="Resources\flags\Egypt.png" />
-    <Content Include="Resources\flags\El_Salvador.png" />
-    <Content Include="Resources\flags\Equatorial_Guinea.png" />
     <Content Include="Resources\flags\Eritrea.png" />
     <Content Include="Resources\flags\Estonia.png" />
     <Content Include="Resources\flags\Ethiopia.png" />
-    <Content Include="Resources\flags\Falkland_Islands.png" />
-    <Content Include="Resources\flags\Faroe_Islands.png" />
     <Content Include="Resources\flags\Fiji.png" />
     <Content Include="Resources\flags\Finland.png" />
     <Content Include="Resources\flags\France.png" />
-    <Content Include="Resources\flags\French_Polynesia.png" />
     <Content Include="Resources\flags\Gabon.png" />
     <Content Include="Resources\flags\Gambia.png" />
     <Content Include="Resources\flags\Georgia.png" />
@@ -197,7 +179,6 @@
     <Content Include="Resources\flags\Ireland.png" />
     <Content Include="Resources\flags\Israel.png" />
     <Content Include="Resources\flags\Italy.png" />
-    <Content Include="Resources\flags\Ivory_Coast.png" />
     <Content Include="Resources\flags\Jamaica.png" />
     <Content Include="Resources\flags\Japan.png" />
     <Content Include="Resources\flags\Jordan.png" />
@@ -214,7 +195,6 @@
     <Content Include="Resources\flags\Libya.png" />
     <Content Include="Resources\flags\Liechtenstein.png" />
     <Content Include="Resources\flags\Lithuania.png" />
-    <Content Include="Resources\flags\LoTW_Flags.jpg" />
     <Content Include="Resources\flags\Luxembourg.png" />
     <Content Include="Resources\flags\Macao.png" />
     <Content Include="Resources\flags\Macedonia.png" />
@@ -224,7 +204,6 @@
     <Content Include="Resources\flags\Maldives.png" />
     <Content Include="Resources\flags\Mali.png" />
     <Content Include="Resources\flags\Malta.png" />
-    <Content Include="Resources\flags\Marshall_Islands.png" />
     <Content Include="Resources\flags\Martinique.png" />
     <Content Include="Resources\flags\Mauritania.png" />
     <Content Include="Resources\flags\Mauritius.png" />
@@ -241,55 +220,33 @@
     <Content Include="Resources\flags\Nauru.png" />
     <Content Include="Resources\flags\Nepal.png" />
     <Content Include="Resources\flags\Netherlands.png" />
-    <Content Include="Resources\flags\Netherlands_Antilles.png" />
-    <Content Include="Resources\flags\New_Zealand.png" />
     <Content Include="Resources\flags\Nicaragua.png" />
     <Content Include="Resources\flags\Niger.png" />
     <Content Include="Resources\flags\Nigeria.png" />
     <Content Include="Resources\flags\Niue.png" />
-    <Content Include="Resources\flags\Norfolk_Island.png" />
-    <Content Include="Resources\flags\North_Korea.png" />
     <Content Include="Resources\flags\Norway.png" />
     <Content Include="Resources\flags\Oman.png" />
     <Content Include="Resources\flags\Pakistan.png" />
     <Content Include="Resources\flags\Palau.png" />
     <Content Include="Resources\flags\Panama.png" />
-    <Content Include="Resources\flags\Papua_New_Guinea.png" />
     <Content Include="Resources\flags\Paraguay.png" />
     <Content Include="Resources\flags\Peru.png" />
     <Content Include="Resources\flags\Philippines.png" />
-    <Content Include="Resources\flags\Pitcairn_Islands.png" />
     <Content Include="Resources\flags\Poland.png" />
     <Content Include="Resources\flags\Portugal.png" />
-    <Content Include="Resources\flags\Puerto_Rico.png" />
     <Content Include="Resources\flags\Qatar.png" />
-    <Content Include="Resources\flags\Republic_of_the_Congo.png" />
     <Content Include="Resources\flags\Romania.png" />
-    <Content Include="Resources\flags\Russian_Federation.png" />
     <Content Include="Resources\flags\Rwanda.png" />
     <Content Include="Resources\flags\Saint_Kitts_and_Nevis.png" />
     <Content Include="Resources\flags\Saint_Lucia.png" />
-    <Content Include="Resources\flags\Saint_Pierre.png" />
-    <Content Include="Resources\flags\Saint_Vicent_and_the_Grenadines.png" />
     <Content Include="Resources\flags\Samoa.png" />
-    <Content Include="Resources\flags\San_Marino.png" />
-    <Content Include="Resources\flags\Sao_Tome_and_Príncipe.png" />
-    <Content Include="Resources\flags\Saudi_Arabia.png" />
     <Content Include="Resources\flags\Senegal.png" />
-    <Content Include="Resources\flags\Serbia_and_Montenegro.png" />
     <Content Include="Resources\flags\Seychelles.png" />
-    <Content Include="Resources\flags\Sierra_Leone.png" />
     <Content Include="Resources\flags\Singapore.png" />
     <Content Include="Resources\flags\Slovakia.png" />
     <Content Include="Resources\flags\Slovenia.png" />
-    <Content Include="Resources\flags\Soloman_Islands.png" />
     <Content Include="Resources\flags\Somalia.png" />
-    <Content Include="Resources\flags\South_Africa.png" />
-    <Content Include="Resources\flags\South_Georgia.png" />
-    <Content Include="Resources\flags\South_Korea.png" />
-    <Content Include="Resources\flags\Soviet_Union.png" />
     <Content Include="Resources\flags\Spain.png" />
-    <Content Include="Resources\flags\Sri_Lanka.png" />
     <Content Include="Resources\flags\Sudan.png" />
     <Content Include="Resources\flags\Suriname.png" />
     <Content Include="Resources\flags\Swaziland.png" />
@@ -301,28 +258,20 @@
     <Content Include="Resources\flags\Tanzania.png" />
     <Content Include="Resources\flags\Thailand.png" />
     <Content Include="Resources\flags\Tibet.png" />
-    <Content Include="Resources\flags\Timor-Leste.png" />
     <Content Include="Resources\flags\Togo.png" />
     <Content Include="Resources\flags\Tonga.png" />
-    <Content Include="Resources\flags\Trinidad_and_Tobago.png" />
     <Content Include="Resources\flags\Tunisia.png" />
     <Content Include="Resources\flags\Turkey.png" />
     <Content Include="Resources\flags\Turkmenistan.png" />
-    <Content Include="Resources\flags\Turks_and_Caicos_Islands.png" />
     <Content Include="Resources\flags\Tuvalu.png" />
     <Content Include="Resources\flags\UAE.png" />
     <Content Include="Resources\flags\Uganda.png" />
     <Content Include="Resources\flags\Ukraine.png" />
-    <Content Include="Resources\flags\United_Kingdom.png" />
-    <Content Include="Resources\flags\United_States_of_America.png" />
     <Content Include="Resources\flags\Uruguay.png" />
-    <Content Include="Resources\flags\US_Virgin_Islands.png" />
     <Content Include="Resources\flags\Uzbekistan.png" />
     <Content Include="Resources\flags\Vanuatu.png" />
-    <Content Include="Resources\flags\Vatican_City.png" />
     <Content Include="Resources\flags\Venezuela.png" />
     <Content Include="Resources\flags\Vietnam.png" />
-    <Content Include="Resources\flags\Wallis_and_Futuna.png" />
     <Content Include="Resources\flags\Yemen.png" />
     <Content Include="Resources\flags\Zambia.png" />
     <Content Include="Resources\flags\Zimbabwe.png" />
@@ -340,13 +289,15 @@
     <Content Include="Resources\fruits\strawberry.jpg" />
     <Content Include="Resources\fruits\tomato.jpg" />
     <Content Include="Resources\fruits\watermelon.jpg" />
-    <Content Include="Resources\hanging1.jpg" />
-    <Content Include="Resources\hanging2.jpg" />
-    <Content Include="Resources\hanging3.jpg" />
-    <Content Include="Resources\hanging4.jpg" />
-    <Content Include="Resources\hanging5.jpg" />
-    <Content Include="Resources\hanging6.jpg" />
-    <Content Include="Resources\hanging7.jpg" />
+    <Content Include="Resources\cover\hanging1.jpg" />
+    <Content Include="Resources\cover\hanging2.jpg" />
+    <Content Include="Resources\cover\hanging3.jpg" />
+    <Content Include="Resources\cover\hanging4.jpg" />
+    <Content Include="Resources\cover\hanging5.jpg" />
+    <Content Include="Resources\cover\hanging6.jpg" />
+    <Content Include="Resources\cover\hanging7.jpg" />
+    <Content Include="Resources\Theme.wav" />
+    <Content Include="Resources\scream.wav" />
     <Content Include="Resources\Ship.jpg" />
     <Content Include="Resources\Pirate_Home.jpg" />
     <Content Include="Resources\vehicles\airplane.png" />
@@ -359,7 +310,6 @@
     <Content Include="Resources\vehicles\motorcycle.png" />
     <Content Include="Resources\vehicles\taxi.png" />
     <Content Include="Resources\vehicles\train.png" />
-    <Content Include="Resources\vehicles\Transportation.gif" />
     <Content Include="Resources\vehicles\truck.png" />
     <Content Include="Resources\vehicles\van.png" />
   </ItemGroup>
